--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@types/react": "^17.0.19",
+    "axios": "^0.21.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-input-mask": "^2.0.4",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
